tests/ui/edge_cases/template_tag_in_eval_mode.rs
use metamatch::eval;

fn main() {
    let res = eval! {
        [<eval>]
        42
        [</eval>]
    };

    assert_eq!(res, 10);
}
